feat: /note /idea /task forwarding, open-loops resurfacing, vault_recent/vault_read tools, ADR-0001
